# rmc

./: Cargo.toml  rustc-ice-2024-03-02T02_38_41-7418.txt
.github/actions/setup/: action.yml
.github/workflows/: cargo-update.yml  release.yml
boogie_ast/src/boogie_program/: mod.rs  writer.rs
cprover_bindings/src/goto_program/: expr.rs  mod.rs  typ.rs
cprover_bindings/src/irep/: irep_id.rs
kani-compiler/: Cargo.toml
kani-compiler/src/: args.rs  kani_compiler.rs  main.rs
kani-compiler/src/codegen_aeneas_llbc/: compiler_interface.rs  mod.rs
kani-compiler/src/codegen_aeneas_llbc/charon/: assumed.rs  deps_errors.rs  divergent.rs  driver.rs  export.rs  expressions.rs  expressions_utils.rs  formatter.rs  gast.rs  gast_utils.rs  get_mir.rs  llbc_ast.rs  llbc_ast_utils.rs  llbc_export.rs  meta.rs  meta_utils.rs  mod.rs  names.rs  names_utils.rs  reorder_decls.rs  translate_constants.rs  translate_crate_to_ullbc.rs  translate_ctx.rs  translate_functions_to_ullbc.rs  translate_predicates.rs  translate_traits.rs  translate_types.rs  types.rs  types_utils.rs  ullbc_ast.rs  ullbc_ast_utils.rs  ullbc_to_llbc.rs  values.rs  values_utils.rs
kani-compiler/src/codegen_aeneas_llbc/charon/ids/: mod.rs
kani-compiler/src/codegen_aeneas_llbc/charon/transform/: index_to_function_calls.rs  insert_assign_return_unit.rs  ops_to_function_calls.rs  reconstruct_asserts.rs  remove_drop_never.rs  remove_dynamic_checks.rs  remove_nops.rs  remove_read_discriminant.rs  remove_unused_locals.rs  simplify_constants.rs  update_closure_signatures.rs
kani-compiler/src/codegen_aeneas_llbc/mir_to_ullbc/: mod.rs
kani-compiler/src/codegen_aeneas_llbc/translate/: export.rs  mod.rs  reorder_decls.rs  translate_ctx.rs  translate_predicates.rs
kani-compiler/src/codegen_boogie/: compiler_interface.rs
kani-compiler/src/codegen_boogie/context/: boogie_ctx.rs  kani_intrinsic.rs
kani-compiler/src/codegen_cprover_gotoc/codegen/: intrinsic.rs  rvalue.rs  statement.rs
kani-compiler/src/codegen_cprover_gotoc/context/: goto_ctx.rs
kani-compiler/src/codegen_cprover_gotoc/overrides/: hooks.rs
kani-compiler/src/kani_middle/: extract_unsafe.rs  mod.rs  provide.rs
kani-driver/src/: call_cargo.rs  call_cbmc.rs  call_single_file.rs  main.rs  project.rs  session.rs
kani_metadata/src/: unstable.rs
llbc/: Cargo.toml
llbc/macros/: Cargo.toml
llbc/macros/src/: lib.rs
llbc/src/: assumed.rs  common.rs  expressions.rs  expressions_utils.rs  formatter.rs  gast.rs  gast_utils.rs  lib.rs  llbc_ast.rs  llbc_ast_utils.rs  meta.rs  meta_utils.rs  names.rs  names_utils.rs  types.rs  types_utils.rs  ullbc_ast_utils.rs  values.rs
llbc/src/ids/: generator.rs  map.rs  vector.rs
scripts/: kani-regression.sh  std-lib-regression.sh
src/kani-compiler/src/codegen_cprover_gotoc/codegen/: operand.rs  place.rs  rvalue.rs
src/test/report/vacuous1/: test.rs
tests/kani/Hash/: hashmap.rs  hashset.rs
tools/compiletest/src/: runtest.rs
