# Copyright Kani Contributors
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "kani-compiler"
version = "0.50.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
cbmc = { path = "../cprover_bindings", package = "cprover_bindings", optional = true }
charon_macros = { path = "src/codegen_aeneas_llbc/macros", package = "macros", optional = true }
clap = { version = "4.4.11", features = ["derive", "cargo"] }
colored = { version = "2.0.4", optional = true }
derivative = { version = "2.2.0", optional = true }
env_logger = { version = "0.8.4", optional = true }
hashlink = { version = "0.7.0", optional = true }
home = "0.5"
im = { version = "15.1.0", optional = true }
index_vec = { version = "0.1.3", features = ["serde"], optional = true}
itertools = "0.12"
kani_metadata = {path = "../kani_metadata"}
lazy_static = "1.4.0"
linked_hash_set = { version = "0.1.4", optional = true }
log = { version = "0.4.17", optional = true }
num = { version = "0.4.0", optional = true }
petgraph = { version = "0.6.2", optional = true }
regex = "1.7.0"
serde = { version = "1", optional = true }
serde_json = "1"
strum = "0.26"
strum_macros = "0.26"
shell-words = "1.0.0"
take_mut = { version = "0.2.2", optional = true }
tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_debug"]}
tracing-subscriber = {version = "0.3.8", features = ["env-filter", "json", "fmt"]}

hax-frontend-exporter = { path = "/home/ubuntu/git/hax/frontend/exporter" }

# Future proofing: enable backend dependencies using feature.
[features]
default = ['aeneas', 'cprover']
aeneas = ['charon_macros', 'colored', 'derivative', 'env_logger', 'hashlink', 'im', 'index_vec', 'linked_hash_set', 'log', 'petgraph', 'take_mut']
cprover = ['cbmc', 'num', 'serde']
write_json_symtab = []

[package.metadata.rust-analyzer]
# This package uses rustc crates.
rustc_private=true
