[package]
name = "llbc"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.4"
derivative = "2.2.0"
env_logger = "0.8.4"
im = "15.1.0"
index_vec = { version = "0.1.3", features = ["serde"] }
log = "0.4.17"
macros = { path = "./macros" }
serde = { version = "1.0.152", features = ["derive"] }
take_mut = "0.2.2"
